--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -142,3 +142,17 @@
 .with-arrow[aria-expanded="true"]::after {
   content: "\f077";
 }
+.grad-row {
+  background: rgba(0, 102, 153, 1);
+  background: -moz-linear-gradient(left, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
+  background: -webkit-gradient(
+    left top,
+    right top,
+    color-stop(0%, rgba(0, 102, 153, 1)),
+    color-stop(100%, rgba(255, 255, 255, 0))
+  );
+  background: -webkit-linear-gradient(left, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
+  background: -o-linear-gradient(left, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
+  background: -ms-linear-gradient(left, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(to right, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
+}
