--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10695,133 +10695,133 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim {
   0% {
-    clip: rect(60px, 9999px, 32px, 0);
+    clip: rect(66px, 9999px, 70px, 0);
   }
   5% {
-    clip: rect(86px, 9999px, 73px, 0);
+    clip: rect(47px, 9999px, 74px, 0);
   }
   10% {
-    clip: rect(83px, 9999px, 34px, 0);
+    clip: rect(25px, 9999px, 31px, 0);
   }
   15% {
-    clip: rect(87px, 9999px, 70px, 0);
+    clip: rect(38px, 9999px, 52px, 0);
   }
   20% {
-    clip: rect(74px, 9999px, 10px, 0);
+    clip: rect(26px, 9999px, 26px, 0);
   }
   25% {
-    clip: rect(25px, 9999px, 76px, 0);
+    clip: rect(43px, 9999px, 43px, 0);
   }
   30% {
-    clip: rect(15px, 9999px, 40px, 0);
+    clip: rect(25px, 9999px, 69px, 0);
   }
   35% {
-    clip: rect(9px, 9999px, 77px, 0);
+    clip: rect(46px, 9999px, 70px, 0);
   }
   40% {
-    clip: rect(78px, 9999px, 79px, 0);
+    clip: rect(27px, 9999px, 36px, 0);
   }
   45% {
-    clip: rect(90px, 9999px, 55px, 0);
+    clip: rect(81px, 9999px, 3px, 0);
   }
   50% {
-    clip: rect(83px, 9999px, 56px, 0);
+    clip: rect(55px, 9999px, 37px, 0);
   }
   55% {
-    clip: rect(80px, 9999px, 78px, 0);
+    clip: rect(46px, 9999px, 52px, 0);
   }
   60% {
-    clip: rect(83px, 9999px, 23px, 0);
+    clip: rect(53px, 9999px, 39px, 0);
   }
   65% {
-    clip: rect(20px, 9999px, 100px, 0);
+    clip: rect(23px, 9999px, 64px, 0);
   }
   70% {
-    clip: rect(28px, 9999px, 92px, 0);
+    clip: rect(95px, 9999px, 59px, 0);
   }
   75% {
-    clip: rect(76px, 9999px, 48px, 0);
+    clip: rect(76px, 9999px, 14px, 0);
   }
   80% {
-    clip: rect(67px, 9999px, 97px, 0);
+    clip: rect(56px, 9999px, 84px, 0);
   }
   85% {
-    clip: rect(19px, 9999px, 30px, 0);
+    clip: rect(81px, 9999px, 69px, 0);
   }
   90% {
-    clip: rect(97px, 9999px, 12px, 0);
+    clip: rect(45px, 9999px, 86px, 0);
   }
   95% {
-    clip: rect(34px, 9999px, 46px, 0);
+    clip: rect(96px, 9999px, 27px, 0);
   }
   100% {
-    clip: rect(99px, 9999px, 46px, 0);
+    clip: rect(68px, 9999px, 14px, 0);
   }
 }
 
 @keyframes noise-anim {
   0% {
-    clip: rect(60px, 9999px, 32px, 0);
+    clip: rect(66px, 9999px, 70px, 0);
   }
   5% {
-    clip: rect(86px, 9999px, 73px, 0);
+    clip: rect(47px, 9999px, 74px, 0);
   }
   10% {
-    clip: rect(83px, 9999px, 34px, 0);
+    clip: rect(25px, 9999px, 31px, 0);
   }
   15% {
-    clip: rect(87px, 9999px, 70px, 0);
+    clip: rect(38px, 9999px, 52px, 0);
   }
   20% {
-    clip: rect(74px, 9999px, 10px, 0);
+    clip: rect(26px, 9999px, 26px, 0);
   }
   25% {
-    clip: rect(25px, 9999px, 76px, 0);
+    clip: rect(43px, 9999px, 43px, 0);
   }
   30% {
-    clip: rect(15px, 9999px, 40px, 0);
+    clip: rect(25px, 9999px, 69px, 0);
   }
   35% {
-    clip: rect(9px, 9999px, 77px, 0);
+    clip: rect(46px, 9999px, 70px, 0);
   }
   40% {
-    clip: rect(78px, 9999px, 79px, 0);
+    clip: rect(27px, 9999px, 36px, 0);
   }
   45% {
-    clip: rect(90px, 9999px, 55px, 0);
+    clip: rect(81px, 9999px, 3px, 0);
   }
   50% {
-    clip: rect(83px, 9999px, 56px, 0);
+    clip: rect(55px, 9999px, 37px, 0);
   }
   55% {
-    clip: rect(80px, 9999px, 78px, 0);
+    clip: rect(46px, 9999px, 52px, 0);
   }
   60% {
-    clip: rect(83px, 9999px, 23px, 0);
+    clip: rect(53px, 9999px, 39px, 0);
   }
   65% {
-    clip: rect(20px, 9999px, 100px, 0);
+    clip: rect(23px, 9999px, 64px, 0);
   }
   70% {
-    clip: rect(28px, 9999px, 92px, 0);
+    clip: rect(95px, 9999px, 59px, 0);
   }
   75% {
-    clip: rect(76px, 9999px, 48px, 0);
+    clip: rect(76px, 9999px, 14px, 0);
   }
   80% {
-    clip: rect(67px, 9999px, 97px, 0);
+    clip: rect(56px, 9999px, 84px, 0);
   }
   85% {
-    clip: rect(19px, 9999px, 30px, 0);
+    clip: rect(81px, 9999px, 69px, 0);
   }
   90% {
-    clip: rect(97px, 9999px, 12px, 0);
+    clip: rect(45px, 9999px, 86px, 0);
   }
   95% {
-    clip: rect(34px, 9999px, 46px, 0);
+    clip: rect(96px, 9999px, 27px, 0);
   }
   100% {
-    clip: rect(99px, 9999px, 46px, 0);
+    clip: rect(68px, 9999px, 14px, 0);
   }
 }
 
@@ -10840,133 +10840,133 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim-2 {
   0% {
-    clip: rect(94px, 9999px, 12px, 0);
+    clip: rect(49px, 9999px, 35px, 0);
   }
   5% {
-    clip: rect(37px, 9999px, 85px, 0);
+    clip: rect(24px, 9999px, 38px, 0);
   }
   10% {
-    clip: rect(14px, 9999px, 79px, 0);
+    clip: rect(22px, 9999px, 2px, 0);
   }
   15% {
-    clip: rect(41px, 9999px, 11px, 0);
+    clip: rect(16px, 9999px, 50px, 0);
   }
   20% {
-    clip: rect(78px, 9999px, 60px, 0);
+    clip: rect(40px, 9999px, 5px, 0);
   }
   25% {
-    clip: rect(76px, 9999px, 6px, 0);
+    clip: rect(26px, 9999px, 15px, 0);
   }
   30% {
-    clip: rect(83px, 9999px, 4px, 0);
+    clip: rect(41px, 9999px, 54px, 0);
   }
   35% {
-    clip: rect(92px, 9999px, 97px, 0);
+    clip: rect(86px, 9999px, 85px, 0);
   }
   40% {
-    clip: rect(6px, 9999px, 6px, 0);
+    clip: rect(98px, 9999px, 16px, 0);
   }
   45% {
-    clip: rect(56px, 9999px, 12px, 0);
+    clip: rect(61px, 9999px, 57px, 0);
   }
   50% {
-    clip: rect(39px, 9999px, 58px, 0);
+    clip: rect(65px, 9999px, 88px, 0);
   }
   55% {
-    clip: rect(90px, 9999px, 47px, 0);
+    clip: rect(17px, 9999px, 43px, 0);
   }
   60% {
-    clip: rect(88px, 9999px, 13px, 0);
+    clip: rect(69px, 9999px, 39px, 0);
   }
   65% {
-    clip: rect(83px, 9999px, 19px, 0);
+    clip: rect(9px, 9999px, 76px, 0);
   }
   70% {
-    clip: rect(45px, 9999px, 15px, 0);
+    clip: rect(87px, 9999px, 99px, 0);
   }
   75% {
-    clip: rect(98px, 9999px, 96px, 0);
+    clip: rect(4px, 9999px, 41px, 0);
   }
   80% {
-    clip: rect(64px, 9999px, 96px, 0);
+    clip: rect(72px, 9999px, 39px, 0);
   }
   85% {
-    clip: rect(89px, 9999px, 68px, 0);
+    clip: rect(42px, 9999px, 81px, 0);
   }
   90% {
-    clip: rect(98px, 9999px, 17px, 0);
+    clip: rect(1px, 9999px, 81px, 0);
   }
   95% {
-    clip: rect(100px, 9999px, 41px, 0);
+    clip: rect(45px, 9999px, 10px, 0);
   }
   100% {
-    clip: rect(75px, 9999px, 69px, 0);
+    clip: rect(19px, 9999px, 74px, 0);
   }
 }
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(94px, 9999px, 12px, 0);
+    clip: rect(49px, 9999px, 35px, 0);
   }
   5% {
-    clip: rect(37px, 9999px, 85px, 0);
+    clip: rect(24px, 9999px, 38px, 0);
   }
   10% {
-    clip: rect(14px, 9999px, 79px, 0);
+    clip: rect(22px, 9999px, 2px, 0);
   }
   15% {
-    clip: rect(41px, 9999px, 11px, 0);
+    clip: rect(16px, 9999px, 50px, 0);
   }
   20% {
-    clip: rect(78px, 9999px, 60px, 0);
+    clip: rect(40px, 9999px, 5px, 0);
   }
   25% {
-    clip: rect(76px, 9999px, 6px, 0);
+    clip: rect(26px, 9999px, 15px, 0);
   }
   30% {
-    clip: rect(83px, 9999px, 4px, 0);
+    clip: rect(41px, 9999px, 54px, 0);
   }
   35% {
-    clip: rect(92px, 9999px, 97px, 0);
+    clip: rect(86px, 9999px, 85px, 0);
   }
   40% {
-    clip: rect(6px, 9999px, 6px, 0);
+    clip: rect(98px, 9999px, 16px, 0);
   }
   45% {
-    clip: rect(56px, 9999px, 12px, 0);
+    clip: rect(61px, 9999px, 57px, 0);
   }
   50% {
-    clip: rect(39px, 9999px, 58px, 0);
+    clip: rect(65px, 9999px, 88px, 0);
   }
   55% {
-    clip: rect(90px, 9999px, 47px, 0);
+    clip: rect(17px, 9999px, 43px, 0);
   }
   60% {
-    clip: rect(88px, 9999px, 13px, 0);
+    clip: rect(69px, 9999px, 39px, 0);
   }
   65% {
-    clip: rect(83px, 9999px, 19px, 0);
+    clip: rect(9px, 9999px, 76px, 0);
   }
   70% {
-    clip: rect(45px, 9999px, 15px, 0);
+    clip: rect(87px, 9999px, 99px, 0);
   }
   75% {
-    clip: rect(98px, 9999px, 96px, 0);
+    clip: rect(4px, 9999px, 41px, 0);
   }
   80% {
-    clip: rect(64px, 9999px, 96px, 0);
+    clip: rect(72px, 9999px, 39px, 0);
   }
   85% {
-    clip: rect(89px, 9999px, 68px, 0);
+    clip: rect(42px, 9999px, 81px, 0);
   }
   90% {
-    clip: rect(98px, 9999px, 17px, 0);
+    clip: rect(1px, 9999px, 81px, 0);
   }
   95% {
-    clip: rect(100px, 9999px, 41px, 0);
+    clip: rect(45px, 9999px, 10px, 0);
   }
   100% {
-    clip: rect(75px, 9999px, 69px, 0);
+    clip: rect(19px, 9999px, 74px, 0);
   }
 }
 
@@ -11114,30 +11114,109 @@ body.sidebar-toggled footer.sticky-footer {
   box-shadow: inset 0 0 5px 0px rgba(0, 0, 0, 0.5), inset 0 0 5px 50px #e74a3b;
 }
 
+.bootstrap-tagsinput {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  display: inline-block;
+  padding: 4px 6px;
+  color: #555;
+  vertical-align: middle;
+  border-radius: 4px;
+  max-width: 100%;
+  line-height: 22px;
+  cursor: text;
+}
+
+.bootstrap-tagsinput input {
+  border: none;
+  box-shadow: none;
+  outline: none;
+  background-color: transparent;
+  padding: 0 6px;
+  margin: 0;
+  width: auto;
+  max-width: inherit;
+}
+
+.bootstrap-tagsinput.form-control input::-moz-placeholder {
+  color: #777;
+  opacity: 1;
+}
+
+.bootstrap-tagsinput.form-control input:-ms-input-placeholder {
+  color: #777;
+}
+
+.bootstrap-tagsinput.form-control input::-webkit-input-placeholder {
+  color: #777;
+}
+
+.bootstrap-tagsinput input:focus {
+  border: none;
+  box-shadow: none;
+}
+
+.bootstrap-tagsinput .tag {
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #006698;
+  background-clip: padding-box;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-radius: 5px;
+  line-height: 34px;
+}
+
+.bootstrap-tagsinput .tag [data-role="remove"] {
+  margin-left: 8px;
+  cursor: pointer;
+}
+
+.bootstrap-tagsinput .tag [data-role="remove"]:after {
+  content: "x";
+  padding: 0px 2px;
+}
+
+.bootstrap-tagsinput .tag [data-role="remove"]:hover {
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  background: #015179;
+  border-radius: 3px;
+  padding: 0;
+  line-height: 20px;
+}
+
+.bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
 .custom-scroll {
   float: left;
-  height: 300px;
+  height: 450px;
   overflow-y: scroll;
   max-width: 100%;
   overflow-x: hidden;
   transition: all 0.5s ease;
+  background: #069;
 }
 
 .custom-scroll::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background-color: #f5f5f5;
+  background-color: #069;
 }
 
 .custom-scroll::-webkit-scrollbar {
   width: 6px;
-  background-color: #f5f5f5;
+  background-color: #069;
 }
 
 .custom-scroll::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
-  background-color: #ccc;
+  background-color: #004669;
 }
 
 .bg-login-image {
@@ -11278,4 +11357,16 @@ body.sidebar-toggled footer.sticky-footer {
   background: #006699;
   background: -webkit-gradient(left top, right top, color-stop(0%, #006699), color-stop(100%, rgba(255, 255, 255, 0)));
   background: linear-gradient(to right, #006699 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.customNav:hover {
+  background: #03537b;
+}
+
+.customNav.active {
+  background: #03537b;
+}
+
+.fixed-bottom.bottom-up-40 {
+  bottom: 41px;
 }
