--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,6 +1,6 @@
 .custom-scroll {
   float: left;
-  height: 300px;
+  height: 450px;
   overflow-y: scroll;
   max-width: 100%;
   overflow-x: hidden;
@@ -8,22 +8,23 @@
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  background: #069;
 }
 .custom-scroll::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background-color: #f5f5f5;
+  background-color: #069;
 }
 
 .custom-scroll::-webkit-scrollbar {
   width: 6px;
-  background-color: #f5f5f5;
+  background-color: #069;
 }
 
 .custom-scroll::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
-  background-color: #ccc;
+  background-color: rgb(0, 70, 105);
 }
 .bg-login-image {
   background: url("../img/loginBg.png");
@@ -155,4 +156,15 @@
   background: -o-linear-gradient(left, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
   background: -ms-linear-gradient(left, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
   background: linear-gradient(to right, rgba(0, 102, 153, 1) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.customNav{
+  &:hover{
+    background: #03537b;
+  }
+  &.active{
+    background: #03537b;
+  }
+}
+.fixed-bottom.bottom-up-40 {
+  bottom: 41px;
 }
